test/classes/initializers/phase1/badDependence2.good
badDependence2.chpl:2: error: 'f5' used before defined (first used here)
